Fix z-index between Scena.AI and Slick.js

--- a/resources/less/custom.less
+++ b/resources/less/custom.less
@@ -982,7 +982,7 @@ label sup {
 
 #scena-ai {
   position: relative;
-  z-index: 1;
+  z-index: 10;
 
   // hide on mobile
   @media(max-width: @screen-xs-max) {
