--- a/resources/less/slick-theme.less
+++ b/resources/less/slick-theme.less
@@ -11,7 +11,7 @@
     line-height: 0;
 
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     top: 50%;
 
     display: block;
